# DraftsIdeas

./: .gitignore
AssemPyCPP/: CMakeLists.txt  README.md  embedded_module.py  main.cpp
AutoHuihuNet/: compile_commands.json
BrailleArt/: index.html  run.sh  script.js  style.css
CatNeuter/scripts/: download_dataset.py  gpu_monitor.py  gpu_power_log.json  infer.py  infer_log.json  train.py  train_log.json
FastapiTest/: README.md  main.py  test_api.sh
FastapiTest/static/: app.js  index.html  style.css
HuihuBash/: HuihuBash.sh
MiniKolektorSSD2/yolov8_project/: README.md  gpu_power_log.json  infer.py  infer_log.json  prepare_dataset.py  train.py  train_log.json
Readouter/: CMakeLists.txt
Readouter/src/: main.cc
SNN_history/: 0319note.md  TODOLIST.md
SNN_history/single/: cifar10_conv1_mlp2.py  cifar10_conv_mlp2_conv.py  cifar10_mlp2.py  cifar10_mlp2_conv1.py  cifar10_mlp3.py  cifar10_mlp3_conv.py  cifar10_stdp_mlp3.py  cifar_mlp1.py  mnist_mlp1.py  mnist_mlp2.py  simple.py  single.py
SNN_history/src/: best_model_.pth  best_model_5conv_res_skip.pth  best_model_dyn_optim.pth  best_model_lif.pth  best_model_stbp.pth  cifar10_back.py  cifar10_conv4_linear2_better_lif.py  cifar10_conv5_lif_linear_skip.py  cifar10_conv_4_lif_4_linear_STBP.py  cifar10_dyn_optim_no_dropout.py  cifar10train.py  gray_conv4_linear2_better_lif.py  mnist.py  mnist_conv2d_lif.py  snn_mnist10_new.py  supervised_snn_cifar10.py  test.py
SNN_history/src/BEST/: cifar10_conv4_linear2_better_lif.py  drop_out_no_gray.py  flatten_snn_stdp_no_drop_out.py  inference.py
SNN_history/src/MLP_SNN_STDP/: linear1_lif_stdp.py  mlp_snn_stdp_gray.py  mnist.py  optuna_mlp_snn_stdp.py
SNN_history/src/model/: CNN_TRADICTIONAL.py  SNN.py  SNN_CLASIFICATION_IMAGE.py  SNN_STDP.py
SuperSubScriptGenerator/: README.md  index.html  serve.sh
TraceSegFault/: CMakeLists.txt
TraceSegFault/src/: main.cc
VTKexp/: README.md  exp1_basic_model.py  exp2_quaternion_sliders.py  exp3_bezier.py  exp4_bspline_interactive.py  exp5_lighting.py  exp6_image_processing.py
VTKexp/ksdd_defect_detection/: README.md  requirements.txt
VTKexp/ksdd_defect_detection/scripts/: cv_baseline.py  download_ksdd.py  infer.py  prepare_ksdd.py  ring_unwrap_demo.py  train_cls.py  train_seg.py  unpack_ksdd.py
VTKexp/ksdd_defect_detection/src/: datasets.py  ksdd_utils.py  train_utils.py  unet.py
br/: CMakeLists.txt
br/src/: Dam.cpp  IntegratedCity.cpp  Mesa.cpp  Stella.cpp
callback_example/: CMakeLists.txt
callback_example/src/: main.cc
cdProj/: CMakeLists.txt
cdProj/docs/: requirements.org
cdProj/include/: proj.hpp
cdProj/src/: main.cc
cppPidModule/: CMakeLists.txt  README.md
cppPidModule/include/: pid.hpp
cppPidModule/src/: main.cc  pid.cc
cpp_linear_regration/include/: shitfilter.hpp
cpp_linear_regration/src/: main.cc
lazyLoading/: test1.cc
overleaf_pdf_fmt/: example.md  md2pdf.sh  overleaf_tpl.tex
simple_alarm/include/: alarm_thread.hpp
simple_alarm/src/: main.cc
sync_test/py/: sync_task_model.py  threaded_task_demo.py
